--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(asteroid-helloworld main.cpp resources.qrc)
-set_target_properties(asteroid-helloworld PROPERTIES PREFIX "")
+add_library(asteroid-health main.cpp resources.qrc)
+set_target_properties(asteroid-health PROPERTIES PREFIX "")
 
-target_link_libraries(asteroid-helloworld PUBLIC
+target_link_libraries(asteroid-health PUBLIC
 	AsteroidApp)
 
-install(TARGETS asteroid-helloworld
+install(TARGETS asteroid-health
 	DESTINATION ${CMAKE_INSTALL_LIBDIR})
