Rename hrgraph to linegraph because it's not actually heartrate specific

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(asteroid-health main.cpp cpp/hrGraph.cpp cpp/hrGraph.h resources.qrc)
+add_library(asteroid-health main.cpp cpp/lineGraph.cpp cpp/lineGraph.h resources.qrc)
 set_target_properties(asteroid-health PROPERTIES PREFIX "")
 
 target_link_libraries(asteroid-health PUBLIC
